package pe.ayni.booking;

/** Lifecycle of a booking. */
public enum BookingStatus {
  CONFIRMED,
  CANCELLED,
  COMPLETED,
  NO_SHOW
}
