package pe.ayni.booking.domain.model;

public enum HourBlockStatus {
    AVAILABLE,
    HELD,
    BOOKED,
    RELEASED
}